external-crates/move/crates/move-compiler/tests/move_check/naming/standalone_mname.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03005]: unbound unscoped name
  ┌─ tests/move_check/naming/standalone_mname.move:3:17
  │
3 │         let m = M; m;
  │                 ^ Unbound constant 'M'
